Did most gonna ffinish tm slide 48

--- a/tutorial/co_order.html
+++ b/tutorial/co_order.html
@@ -7,7 +7,7 @@
     Tutorial Case
     
     Coctura Order Page
-    Author: 
+    Author: Nicholas Garcia
     Date:   
 
     Filename: co_order.html
