--- a/tutorial/co_payment.html
+++ b/tutorial/co_payment.html
@@ -7,7 +7,7 @@
     Tutorial Case
     
     Coctura Payment Page
-    Author: 
+    Author:Nicholas Garcia 
     Date:   
 
     Filename: co_payment.html
